compiler/tools/fpp-to-dict/test/top/missingFwOpcodeType.ref.txt
fpp-to-dict
[ local path prefix ]/tools/fpp-to-dict/test/top/missingFwOpcodeType.fpp:6.1
topology T {
^
error: undefined symbol FwOpcodeType
note: Dictionary requires type FwOpcodeType to be defined.
